--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,7 @@
               "src/assets"
             ],
             "styles": [
+              "../node-modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
