--- a/angular.json
+++ b/angular.json
@@ -1,14 +1,18 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "eaddebb3-977a-4203-aa40-529a55d02d25"
+    "analytics": false
   },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angcli": {
+    "Udemycourseproj": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -16,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angcli",
+            "outputPath": "dist/Udemycourseproj",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -49,13 +54,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
                 }
               ]
             }
@@ -64,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angcli:build"
+            "browserTarget": "Udemycourseproj:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angcli:build:production"
+              "browserTarget": "Udemycourseproj:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angcli:build"
+            "browserTarget": "Udemycourseproj:build"
           }
         },
         "test": {
@@ -90,7 +95,6 @@
               "src/assets"
             ],
             "styles": [
-              "../node-modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -113,16 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angcli:serve"
+            "devServerTarget": "Udemycourseproj:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angcli:serve:production"
+              "devServerTarget": "Udemycourseproj:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angcli"
+  "defaultProject": "Udemycourseproj"
 }
